[gd_scene format=3 uid="uid://010e27ju6bgn"]

[ext_resource type="Script" uid="uid://cgyl6i4of8a2" path="res://scripts/upgrade_item.gd" id="1_sdq3q"]
[ext_resource type="Theme" uid="uid://chhvtf2qcxb8j" path="res://theme.tres" id="2_k55vl"]

[node name="UpgradeItem" type="Control" unique_id=1603925993]
layout_mode = 2
custom_minimum_size = Vector2(220, 36)
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_k55vl")
script = ExtResource("1_sdq3q")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1950353544]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="VBoxContainer" unique_id=1770651556]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8

[node name="DescriptionLabel" type="Label" parent="VBoxContainer" unique_id=151268873]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=2107890441]
layout_mode = 2

[node name="CostLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=1314991403]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8

[node name="BuyBtn" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1582853225]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Buy"
